<resources>
    <string name="app_name">Decision Maker</string>
    <string name="button_spin_text">Spin</string>
    <string name="menu_modify_text">Modify options</string>
    <string name="button_addOption">Add</string>
    <string name="menu_clear">Clear</string>
    <string name="editText_addOption_hint">Enter option</string>
    <string name="editText_title_hint">Roulette title</string>
    <string name="floatButton_ready_desc">Commit options</string>
    <string name="button_deleteOption_desc">Delete option</string>
    <string name="button_search_desc">Search result in Google</string>
    <string name="button_share_desc">Share result</string>
    <string name="EMPTY_STRING">""</string>
    <string name="ROULETTE_DEFAULT_TITLE">Roulette 1</string>
    <string name="ROULETTE_INIT_TITLE">What to eat today?</string>
    <string name="MIN_OPTIONS_CONSTRAINT">At least two options!</string>
    <string name="MAX_OPTIONS_CONSTRAINT">You\'ve reached the maximum number of options!</string>
    <string name="MAX_ROULETTES_CONSTRAINT">You\'ve reached the maximum number of roulettes!</string>
    <string name="UNTIL_SPIN_COMPLETED">Wait until roulette spin completed</string>
    <string name="URL_GOOGLE">https://www.google.com/search?q=%s</string>
    <string name="title_activity_my_roulettes">My Roulettes</string>
    <string name="menutitle_showRoulettes">My Roulettes</string>
    <string name="menu_title_add">Add</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="general_header">General</string>
    <string name="roulette_header">Roulette</string>

    <!-- General Preferences -->
    <string name="sound_title">Sound</string>
    <string name="sound_summary">Allow tone while Roulette is spinning</string>
    <string name="shake_title">Shake</string>
    <string name="shake_summary">Allow Roulette to spin by shaking the device</string>

    <!-- Roulette Preferences -->
    <string name="color_title">Color scheme</string>
    <string name="title_activity_rate">Rate the app</string>
    <string name="title_activity_share">Share the app</string>
    <string name="title_activity_feedback">Send feedback</string>

</resources>