<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_header">

        <SwitchPreferenceCompat
            app:key="sound"
            app:summary="@string/sound_summary"
            app:title="@string/sound_title" />

        <SwitchPreferenceCompat
            app:key="shake"
            app:summary="@string/shake_summary"
            app:title="@string/shake_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/roulette_header">

        <ListPreference
            app:defaultValue="red"
            app:entries="@array/color_entries"
            app:entryValues="@array/color_values"
            app:key="color_scheme"
            app:title="@string/color_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>